# homomorphic_battleship_game

./: .gitignore  LICENSE  README.md  pyproject.toml  terminal_snippet.md
src/: __init__.py  board.py  crypto.py  game_logic.py  main.py  server.py
tests/: conftest.py  test_board.py  test_crypto.py  test_game.py  test_manual_placement.py
