[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homomorphic-battleship"
version = "1.0.0"
description = "Two-player Battleship game with Paillier homomorphic encryption"
requires-python = ">=3.10"
dependencies = [
    "phe>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "phe>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.pylance]
extraPaths = ["src"]
